<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/LinearLayout2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="42dp">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/imageView1"
                android:src="@drawable/ic_action_phone"
                android:onClick="call"
                android:contentDescription="@string/emergency_phone" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/emergency_contact"
                android:layout_toRightOf="@+id/imageView1"
                android:layout_marginLeft="@dimen/text_view_separator_padding"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="@dimen/text_view_separator_padding"
            android:layout_marginRight="@dimen/text_view_separator_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/emergencyTextView"
            android:layout_marginTop="@dimen/text_view_separator_padding"
            android:onClick="call"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emergency_alarm_number"
            android:clickable="true"

            android:layout_gravity="center" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/LinearLayout3"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="42dp">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_action_web"
                android:onClick="call"
                android:contentDescription="@string/emergency_map"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/emergency_nearest_schweiss"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_marginLeft="@dimen/text_view_separator_padding"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="@dimen/text_view_separator_padding"
            android:layout_marginRight="@dimen/text_view_separator_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/schweissTextView"
            android:layout_marginTop="@dimen/text_view_separator_padding"
            android:onClick="web"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/emergency_schwissdk"
            android:clickable="true"
            android:autoLink="web"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>